test_files/bad/not_right.ru
def A "true" "false"

if C | D then "false"

=C

?A